crates/toml/tests/snapshots/invalid/inline-table/overwrite-05.stderr
TOML parse error at line 3, column 2
  |
3 | [inline-t.nest]
  |  ^^^^^^^^
cannot extend value of type inline table with a dotted key

---
TOML parse error at line 3, column 2
  |
3 | [inline-t.nest]
  |  ^^^^^^^^
cannot extend value of type inline table with a dotted key
